[gd_scene load_steps=2 format=2]

[ext_resource path="res://Player/CameraScript.gd" type="Script" id=1]

[node name="CamRoot" type="Spatial"]
script = ExtResource( 1 )

[node name="OuterGimbal" type="Spatial" parent="."]

[node name="InnerGimbal" type="Spatial" parent="OuterGimbal"]

[node name="Camera" type="ClippedCamera" parent="OuterGimbal/InnerGimbal"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.09139, 2.98707 )
current = true
process_mode = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="MouseDelay" type="Timer" parent="."]
